--- a/vignettes/irace-package.bib
+++ b/vignettes/irace-package.bib
@@ -21,8 +21,6 @@
 @string{cec06 = {Proceedings of the 2006 Congress on Evolutionary
                   Computation (CEC 2006)}}
 
-@string{orp = {Operations Research Perspectives}}
-
 @string{balaprakash = {  Prasanna Balaprakash }}
 
 @string{bartz-beielstein = { Thomas Bartz-Beielstein }}
@@ -42,8 +40,6 @@
 @string{lopez-ibanez = { Manuel L{\'o}pez-Ib{\'a}{\~n}ez }}
 
 @string{paquete = { Lu{\'i}s Paquete }}
-
-@string{perez_l = {Leslie {P{\'e}rez C{\'a}ceres} }}
 
 @string{preuss_m = { Mike Preuss }}
 
@@ -87,30 +83,10 @@
                   exponent even further.}
 }
 
-@techreport{IRIDIA-2004-001,
-  author = birattari,
-  title = {On the Estimation of the Expected Performance of a Metaheuristic on a Class of Instances. How Many Instances, How Many Runs?},
-  institution = iridia,
-  year = 2004,
-  number = {TR/IRIDIA/2004-001}
-}
-
-@article{LopDubPerStuBir2016irace,
-  author = lopez-ibanez # and # dubois-lacoste # and # perez_l # and # stuetzle # and # birattari,
-  title = {The {\Rpackage{irace}} package: Iterated Racing for Automatic
-                  Algorithm Configuration},
-  journal = orp,
-  year = 2016,
-  supplement = {http://iridia.ulb.ac.be/supp/IridiaSupp2016-003/},
-  doi = {10.1016/j.orp.2016.09.002},
-  volume = 3,
-  pages = {43--58}
-}
-
 @techreport{LopDubStu2011irace,
   author = lopez-ibanez # and # dubois-lacoste # and # stuetzle # and # birattari,
-  title = {The {\Rpackage{irace}} package, Iterated Race for Automatic
-                  Algorithm Configuration},
+  title = {The {\Rpackage{irace}} package, Iterated Race for
+                  Automatic Algorithm Configuration},
   institution = iridia,
   year = 2011,
   number = {TR/IRIDIA/2011-004},
