--- a/vignettes/irace-package.bib
+++ b/vignettes/irace-package.bib
@@ -21,6 +21,10 @@
 @string{cec06 = {Proceedings of the 2006 Congress on Evolutionary
                   Computation (CEC 2006)}}
 
+@string{acm-cs = {{ACM} Computing Surveys}}
+
+@string{orp = {Operations Research Perspectives}}
+
 @string{balaprakash = {  Prasanna Balaprakash }}
 
 @string{bartz-beielstein = { Thomas Bartz-Beielstein }}
@@ -39,7 +43,11 @@
 
 @string{lopez-ibanez = { Manuel L{\'o}pez-Ib{\'a}{\~n}ez }}
 
+@string{mcgeoch_cc = { Catherine C. McGeoch }}
+
 @string{paquete = { Lu{\'i}s Paquete }}
+
+@string{perez_l = {Leslie {P{\'e}rez C{\'a}ceres} }}
 
 @string{preuss_m = { Mike Preuss }}
 
@@ -83,10 +91,64 @@
                   exponent even further.}
 }
 
+@article{McG1992vrt,
+  author = mcgeoch_cc,
+  title = {Analyzing Algorithms by Simulation: Variance Reduction
+                  Techniques and Simulation Speedups},
+  abstract = {Although experimental studies have been widely applied to the
+                  investigation of algorithm performance, very little attention
+                  has been given to experimental method in this area. This is
+                  unfortunate, since much can be done to improve the quality of
+                  the data obtained; often, much improvement may be needed for
+                  the data to be useful. This paper gives a tutorial discussion
+                  of two aspects of good experimental technique: the use of
+                  variance reduction techniques and simulation speedups in
+                  algorithm studies.  In an illustrative study, application of
+                  variance reduction techniques produces a decrease in variance
+                  by a factor 1000 in one case, giving a dramatic improvement
+                  in the precision of experimental results. Furthermore, the
+                  complexity of the simulation program is improved from
+                  $\Theta(m n/H_n)$ to $\Theta(m + n \log n)$ (where $m$ is
+                  typically much larger than $n$), giving a much faster
+                  simulation program and therefore more data per unit of
+                  computation time. The general application of variance
+                  reduction techniques is also discussed for a variety of
+                  algorithm problem domains.},
+  volume = 24,
+  doi = {10.1145/130844.130853},
+  number = 2,
+  journal = acm-cs,
+  year = 1992,
+  keywords = {experimental analysis of algorithms, move-to-front rule,
+                  self-organizing sequential search, statistical analysis of
+                  algorithms, transpose rule, variance reduction techniques},
+  pages = {195--212}
+}
+
+@techreport{IRIDIA-2004-001,
+  author = birattari,
+  title = {On the Estimation of the Expected Performance of a Metaheuristic on a Class of Instances. How Many Instances, How Many Runs?},
+  institution = iridia,
+  year = 2004,
+  number = {TR/IRIDIA/2004-001}
+}
+
+@article{LopDubPerStuBir2016irace,
+  author = lopez-ibanez # and # dubois-lacoste # and # perez_l # and # stuetzle # and # birattari,
+  title = {The {\Rpackage{irace}} package: Iterated Racing for Automatic
+                  Algorithm Configuration},
+  journal = orp,
+  year = 2016,
+  supplement = {http://iridia.ulb.ac.be/supp/IridiaSupp2016-003/},
+  doi = {10.1016/j.orp.2016.09.002},
+  volume = 3,
+  pages = {43--58}
+}
+
 @techreport{LopDubStu2011irace,
   author = lopez-ibanez # and # dubois-lacoste # and # stuetzle # and # birattari,
-  title = {The {\Rpackage{irace}} package, Iterated Race for
-                  Automatic Algorithm Configuration},
+  title = {The {\Rpackage{irace}} package, Iterated Race for Automatic
+                  Algorithm Configuration},
   institution = iridia,
   year = 2011,
   number = {TR/IRIDIA/2011-004},
