* R/race.R: Fix bug when deterministic==1.  * tests/testthat.R: Test also deterministic==TRUE.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1696 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,10 @@
+ * Fix bug when deterministic == 1.
+   (Manuel López-Ibáñez, Leslie Pérez Cáceres)
+
  * Update manual and vignette with details about the expected arguments and
    return value of targetRunner and targetEvaluator. (Manuel López-Ibáñez)
+
+ * Many updates to the User Guide vignette. (Manuel López-Ibáñez)
 
  * Fix \dontrun example in irace-package.Rd (Manuel López-Ibáñez)
 
