* R/readConfiguration.R: do not warn if the last line does not finish with a newline.  * R/main.R: Clarify comment.  * R/irace.R: Remove fixed comment. More consistent output.  * NEWS: Update.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1698 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+
+ * Do not warn if the last line in the instance file does not terminate with a
+   newline. (Manuel López-Ibáñez)
+ 
  * Fix bug when deterministic == 1.
    (Manuel López-Ibáñez, Leslie Pérez Cáceres)
 
