* NEWS: add item before we forget.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1709 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
-
+ * Restrict the number of maximum configurations per race to 1024.
+   (Leslie Pérez Cáceres)
+   
  * Do not warn if the last line in the instance file does not terminate with a
    newline. (Manuel López-Ibáñez)
  
