* NEWS: mention fixed examples.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1716 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+ * Fix examples/sge-cluster for elitist irace. (Manuel López-Ibáñez)
+ 
  * Restrict the number of maximum configurations per race to 1024.
    (Leslie Pérez Cáceres)
    
