* NEWS: Fix typo.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1717 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -30,7 +30,7 @@
 
        --only-test FILE
 
-   which simple evaluates the configurations given in FILE on the testing
+   which just evaluates the configurations given in FILE on the testing
    instances defined by the scenario. Useful if you decide on the testing
    instances only after running irace. (Manuel López-Ibáñez)
 
