--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+ * Fix a bug that re-executed elite results under some circumstances.
+   (Leslie Pérez Cáceres)
+   
  * Fix examples/sge-cluster for elitist irace. (Manuel López-Ibáñez)
  
  * Restrict the number of maximum configurations per race to 1024.
